# swisscom-internetbox-hass

./: .gitignore  LICENSE  hacs.json  pyproject.toml  readme.md  requirements.test.txt  requirements.txt
.github/workflows/: ci.yaml  ci.yml  release.yml  validate.yaml  validate.yml
custom_components/swisscom/: __init__.py  config_flow.py  const.py  device_tracker.py  entity.py  manifest.json  router.py  strings.json
custom_components/swisscom_internetbox/: __init__.py  api.py  config_flow.py  const.py  coordinator.py  device_tracker.py  entity.py  manifest.json  router.py  sensor.py  strings.json
tests/custom_components/swisscom/: test_config_flow.py
tests/swisscom_internetbox/: test_config_flow.py
