[project]
name = "Swisscom"
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://github.com/schmidtfx/swisscom-internetbox-hass"

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages=["custom_components"]

[tool.pytest.ini_options]
pythonpath=["."]
asyncio_mode = "auto"
testpaths = [
    "tests",
]

[tool.coverage.run]
source = [
    "custom_components.swisscom_internetbox"
]

[tool.coverage.report]
show_missing = "true"

[tool.black]
target-version = ["py311"]

[tool.isort]
# https://github.com/PyCQA/isort/wiki/isort-Settings
profile = "black"
# will group `import x` and `from x import` of the same module.
force_sort_within_sections = true